<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/what"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/what_name"
        android:onClick="showWhat"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/whatcircle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/what"
        android:onClick="showWhat"
        android:padding="@dimen/padding_wide"
        android:text="@string/what_name" />

    <ImageView
        android:id="@+id/start"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_below="@id/what"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/start_name"
        android:onClick="showStart"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/what"
        android:layout_toRightOf="@id/start"
        android:onClick="showStart"
        android:padding="@dimen/padding_wide"
        android:text="@string/start_name" />

    <ImageView
        android:id="@+id/ff"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_below="@id/start"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/ff_name"
        android:onClick="showFunFact"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/funfactcircle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start"
        android:layout_toRightOf="@id/ff"
        android:onClick="showFunFact"
        android:padding="@dimen/padding_wide"
        android:text="@string/ff_name" />

    <ImageView
        android:id="@+id/us"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_below="@id/ff"
        android:layout_marginTop="-1dp"
        android:contentDescription="@string/about_us"
        android:onClick="showAboutUs"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/circleus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ff"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-1dp"
        android:layout_toRightOf="@id/us"
        android:onClick="showAboutUs"
        android:padding="@dimen/padding_wide"
        android:text="@string/about_us" />
</RelativeLayout>