<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.finalproject.NotificationActivity">

    <TextView
        android:id="@+id/twenty"
        style="@style/MenuDetailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:text="@string/twenty" />

    <RelativeLayout
        android:id="@+id/n20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/notif_20"
            style="@style/MenuDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/twenty"
            android:padding="@dimen/padding_regular"
            tools:ignore="NotSibling"></EditText>

        <Button
            android:id="@+id/button_20"
            style="@style/MenuDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/notif_20"
            android:onClick="saveNotif20"
            android:text="@string/button_notif" />

    </RelativeLayout>


    <TextView
        android:id="@+id/exerc"
        style="@style/MenuDetailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:text="@string/exer" />

    <RelativeLayout
        android:id="@+id/exer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_20"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/notif_exer"
            style="@style/MenuDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exerc"
            android:padding="@dimen/padding_regular"
            tools:ignore="NotSibling"></EditText>

        <Button
            android:id="@+id/button_exer"
            style="@style/MenuDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/notif_exer"
            android:onClick="saveNotifExer"
            android:text="@string/button_notif" />

    </RelativeLayout>

    <TextView
        android:id="@+id/drinky"
        style="@style/MenuDetailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:text="@string/drink" />

    <RelativeLayout
        android:id="@+id/drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_exer"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/notif_drink"
            style="@style/MenuDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drinky"
            android:padding="@dimen/padding_regular"
            tools:ignore="NotSibling"></EditText>

        <Button
            android:id="@+id/button_drink"
            style="@style/MenuDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/notif_drink"
            android:onClick="saveNotifDrink"
            android:text="@string/button_notif" />

    </RelativeLayout>

</LinearLayout>